--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,4 +8,4 @@ jobs:
       uses: actions/checkout@master
 
     - name: Build and Deploy
-      run: npm run deploy
+      run: npm ci && npm run deploy
