--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,5 +9,5 @@ jobs:
 
     - name: Build and Deploy
       run: npm ci && npm run deploy
-      with:
+      env:
         ACCESS_TOKEN: {{ $secrets.ACCESS_TOKEN }}
