--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,6 @@ jobs:
       uses: actions/checkout@master
 
     - name: Build and Deploy
-      run: npm ci && npm run deploy
       env:
-        ACCESS_TOKEN: {{ $secrets.ACCESS_TOKEN }}
+         ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+      run: npm ci && npm run deploy
