--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,8 +16,8 @@ jobs:
         npm run-script build
 
     - name: Deploy
-      uses: peaceiris/actions-gh-pages@v2
-      env:
+      uses: JamesIves/github-pages-deploy-action@releases/v3
+      with:
         ACTIONS_DEPLOY_KEY: ${{ secrets.ACTIONS_DEPLOY_KEY }}
-        PUBLISH_BRANCH: gh-pages
-        PUBLISH_DIR: .
+        BRANCH: gh-pages
+        FOLDER: build
