--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,4 +11,4 @@ jobs:
       uses: actions/checkout@v1
 
     - name: Build and Deploy
-      run: npm ci && gh-pages --repo https://$GITHUB_TOKEN@github.com/abgeorge77/shouldibothergarrett.com.git
+      run: npm ci && npm run build && gh-pages --repo https://${{ secrets.GITHUB_TOKEN }}@github.com/abgeorge77/shouldibothergarrett.com.git -d build
