--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,4 +11,4 @@ jobs:
       uses: actions/checkout@v1
 
     - name: Build and Deploy
-      run: npm ci && npm run deploy --repo https://${{ secrets.GHDEPLOY_TOKEN }}@github.com/abgeorge77/shouldibothergarrett.com.git
+      run: git config --global user.email "you@example.com" && && git config --global user.name "Your Name" && npm ci && npm run deploy --repo https://${{ secrets.GHDEPLOY_TOKEN }}@github.com/abgeorge77/shouldibothergarrett.com.git
